# backend/src/main/java/cn/whuerbbs/backend/controller/v1/AnonymousPostControllerV1.java
@@ -6,7 +6,7 @@ import cn.whuerbbs.backend.dto.AnonymousPostDTO;
 import cn.whuerbbs.backend.enumeration.AttitudeTarget;
 import cn.whuerbbs.backend.enumeration.Board;
 import cn.whuerbbs.backend.exception.BusinessException;
-import cn.whuerbbs.backend.model.PostCollection;
+import cn.whuerbbs.backend.model.Post;
 import cn.whuerbbs.backend.service.*;
 import cn.whuerbbs.backend.util.ImageUtil;
 import cn.whuerbbs.backend.vo.AnonymousPostListVO;
@@ -20,6 +20,7 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.constraints.NotNull;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @RestController
@@ -66,11 +67,22 @@ public class AnonymousPostControllerV1 {
      */
     @GetMapping
     public Page<AnonymousPostListVO> getAllAnonymousPosts(
+            @RequestParam(value = "topic_id", required = false) Long topicId,
+            @RequestParam(value = "hot", required = false) boolean hot,
             @Range(min = 1, max = Integer.MAX_VALUE) @RequestParam(defaultValue = "1") int page,
             @Range(min = 1, max = 100) @RequestParam(value = "per_page", defaultValue = "10") int perPage,
             @CurrentUser CurrentUserData currentUserData) {
         var pageRequest = PageRequest.of(page, perPage);
-        var postPage = postService.getPageableByBoard(pageRequest, Board.ANONYMOUS_POST);
+        Page<Post> postPage;
+        if (Objects.nonNull(topicId)) {
+            if (hot) {
+                postPage = postService.getHotPostsPageableByTopicId(topicId, pageRequest);
+            } else {
+                postPage = postService.getPostsPageableByTopicId(topicId, pageRequest);
+            }
+        } else {
+            postPage = postService.getPageableByBoard(Board.ANONYMOUS_POST, pageRequest);
+        }
         return postPage.map(post -> {
             var attachmentOptional = attachmentService.getFirstByPostId(post.getId());
             var anonymousPost = anonymousPostService.getByPostId(post.getId()).orElseThrow(() -> new BusinessException("帖子不存在"));
@@ -92,7 +104,9 @@ public class AnonymousPostControllerV1 {
         var anonymousPost = anonymousPostService.getByPostId(post.getId()).orElseThrow(() -> new BusinessException("帖子不存在"));
         var anonymousPostVO = new AnonymousPostVO(post,
                 attachments.stream().map(attachment -> imageUtil.getFullPath(attachment.getPath())).collect(Collectors.toList()),
-                topics, collected,
+                topics,
+                collected,
+                currentUserData,
                 anonymousPost.getAnonymousName(),
                 imageUtil.getFullPath(defaultAnonymousAvatarPath));
         anonymousPostVO.setAttitudeStatus(attitudeService.getAttitudeStatus(currentUserData.getUserId(), AttitudeTarget.POST, String.valueOf(postId)));
